# ex_text_splitter

./: .gitignore  README.md  mix.exs
config/: config.exs
examples/: ex_text_splitter.livemd
lib/: ex_text_splitter.ex
native/ex_text_splitter/: Cargo.toml  README.md
native/ex_text_splitter/src/: lib.rs
test/: ex_text_splitter_test.exs  test_helper.exs
