[package]
name = "ex_text_splitter"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "ex_text_splitter"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
tiktoken-rs = { version = "0.5.8", optional = true }
text-splitter = "0.10.0"
rustler = "0.32.1"

[features]
markdown = ["text-splitter/markdown"]
tiktoken-rs = ["dep:tiktoken-rs", "text-splitter/tiktoken-rs"]
